Assistant checkpoint: Add missing elements and update NASA API endpoint
Assistant generated file changes:
- game.html: Add missing form elements
- script.js: Update API URL and error handling

---

User prompt:

Cannot read properties of null (reading 'addEventListener')
Cannot set properties of null (setting 'value')
Failed to load image: https://trek.nasa.gov/tiles/Moon/EQ/LRO_WAC_Mosaic_Global_303ppd/1.0.0/default/default0288/10/395/170.png

--- a/game.html
+++ b/game.html
@@ -105,6 +105,9 @@
   
       <div id="feedback">
         <p>Your Score: <span id="score">0</span></p>
+        <p>Enter coordinates (latitude, longitude):</p>
+        <input type="text" id="guess-coordinates" placeholder="e.g., 170, 395">
+        <button id="submit-guess">Submit Guess</button>
         <p id="result"></p>
         <button id="next-round">Next Round</button>
       </div>
