Assistant checkpoint: Update image URLs and Maps API key reference
Assistant generated file changes:
- script.js: Update lunar location image URLs
- game.html: Update Google Maps API key reference

---

User prompt:

the pixture isnt loading

--- a/game.html
+++ b/game.html
@@ -93,7 +93,7 @@
   
   
       <div id="map" style="height: 400px; width: 100%; margin: 20px 0; border: 2px solid white; border-radius: 10px;"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=ACTUAL_API_KEY&callback=initMap" defer></script>
   
   
       <div id="feedback">
