--- a/const.html
+++ b/const.html
@@ -33,7 +33,10 @@
         font-family: "Parkinsans", sans-serif;
         text-align: center;
         padding: 50px;
-        
+        background-image: url("constBG.png");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
         color: black;
     }
 
