--- a/game.html
+++ b/game.html
@@ -93,7 +93,7 @@
   
   
       <div id="map" style="height: 400px; width: 100%; margin: 20px 0; border: 2px solid white; border-radius: 10px;"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOojAlm6BYkMs0emwZ99uP0pcq4AESk4w&callback=initMap" async defer></script>
   
   
       <div id="feedback">
