User checkpoint: Adjust image placement and styling on lunar surface image.

--- a/const.html
+++ b/const.html
@@ -50,7 +50,7 @@
       color: white;
       font-weight: bold;
       font-family: "Inter Tight", monospace;
-      text-indent: 55%;
+      margin-left: 20%;
       text-align: left;
     }
 
@@ -84,6 +84,8 @@
       font-weight: light;
       font-size: 10px;
       font-family: "Inter Tight", sans-serif;
+      margin-left: 25%;
+      text-align: left;
     }
   </style>
 </head>
