User checkpoint: Increase font size in const.html and add a new image.

--- a/const.html
+++ b/const.html
@@ -50,6 +50,7 @@
       color: white;
       font-weight: bold;
       font-family: "Inter Tight", monospace;
+      font-size: 40px;
       margin-left: 20%;
       text-align: left;
     }
@@ -82,9 +83,10 @@
       color: white;
       text-indent: 5px;
       font-weight: light;
-      font-size: 10px;
+      font-size: 25px;
       font-family: "Inter Tight", sans-serif;
       margin-left: 25%;
+      margin-right: 25%;
       text-align: left;
     }
   </style>
